snapshots/syntax/statements/declarations/mod/erase_preserves_whitespace.snap
---
source: src/syntax/statements/declarations/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: EraseStatement
      children:
        - kind: EraseKeyword
          text: Erase
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: myArray
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
