snapshots/syntax/statements/declarations/mod/multiple_erase_statements.snap
---
source: src/syntax/statements/declarations/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: EraseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: EraseKeyword
                  text: Erase
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: array1
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: DoSomething
                - kind: Newline
                  text: "\n"
            - kind: EraseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: EraseKeyword
                  text: Erase
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: array2
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
